# ecobuild

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  scenario_config.json  start.sh
ecobuild_env/: __init__.py  air_quality.py  client.py  energy_sources.py  environment.py  festival_calendar.py  genset.py  grid.py  humidity.py  models.py  occupancy.py  tariff.py  task_configs.py  tasks.py  thermal.py  weather.py
server/: app.py
tests/: test_environment.py
