[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecobuild"
version = "1.0.0"
description = "Smart building energy management RL environment"
dependencies = [
    "openenv-core>=0.1.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
server = "server.app:main"
